Major UI update

--- a/frontEnd_dev/src/app/app.component.html
+++ b/frontEnd_dev/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="main-container row vh-100">
-  <app-side-bar class="col-3 h-100 border"></app-side-bar>
-  <div class="col-9">
+  <app-side-bar class="col-2 h-100 border"></app-side-bar>
+  <div class="col-10 h-100">
     <router-outlet></router-outlet>
   </div>
 
