--- a/frontEnd_dev/src/app/side-bar/side-bar.component.css
+++ b/frontEnd_dev/src/app/side-bar/side-bar.component.css
@@ -1,3 +1,16 @@
 button {
   display: block;
 }
+
+a {
+  display: block;
+  text-decoration: none;
+  color: #fff;
+}
+
+a:hover {
+  background-color: #c495fd;
+  color: black;
+  width: 100%;
+  height: 100%;
+}
