--- a/frontEnd_dev/src/app/summarize/summarize.component.html
+++ b/frontEnd_dev/src/app/summarize/summarize.component.html
@@ -41,6 +41,7 @@
       </div>
     </div>
     <button type="submit" class="btn btn-primary">Summarize!</button>
+    <p *ngIf="error" class="alert alert-danger mt-3 text-center error">{{error}}</p>
   </form>
   <div class="summary-output w-50 mt-3">
     <p>Summary:</p>
