--- a/frontEnd_dev/src/app/summary/summary.component.html
+++ b/frontEnd_dev/src/app/summary/summary.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class=" mb-3">
       <label for="input_text" class="form-label fw-bold">To summarize:</label>
-      <textarea type="textarea" class="form-control" formControlName="input_text" id="input_text" name="input_text" rows="10"></textarea>
+      <textarea type="textarea" class="form-control" formControlName="input_text" id="input_text" name="input_text" rows="10" value="{{summary?.input_text}}"></textarea>
     </div>
   </div>
   <div class="summary-output w-50 mt-3">
